fixed desktop spacing for review description

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -372,6 +372,7 @@ input[type=checkbox] {
 
 .review__description {
     margin-top: 2.5em;
+    padding-top: 1.5em;
 }
 
     /* Sidebar Styles */
